tests/invalid/simple/VarDecl_CompileFail_3.whiley
int f(int x, int y) where x>=0 && y>0:
    return z
